[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
byte-unit = "5.1.3"
crossterm = "0.27.0"
ratatui = "0.25.0"
sysinfo = "0.30.5"

# use LTO for smaller binaries (that take longer to build)
[profile.release]
lto = true
strip = true
opt-level = "z"
codegen-units = 1
panic = 'abort'
